test/testdata/while/break_inside_nested_function_error.lox
while (true) {
  fun b() {
    // error: 'break' can only be used inside a loop
    // lint error: 'break' can only be used inside a loop
    break;
  }
  b();
  break;
}
